# perkins

./: .gitignore  .pre-commit-config.yaml  README.md  cliplin.yaml  pyproject.toml
.claude/: instructions.md
.claude/rules/: context-protocol-loading.md  feature-processing.md
docs/features/: perkins-chat.feature  perkins-init.feature  perkins-master-orchestrator.feature  perkins-runtime.feature  perkins.feature
docs/tdrs/: perkins-agent-orchestration.md  perkins-chat-server.md  perkins-cli-framework.md  perkins-flow-lifecycle.md  perkins-github-operations.md  perkins-mcp-server.md  perkins-runtime-process.md  perkins-search.md  perkins-serialization.md  perkins-subprocess-management.md
scripts/: acd-validate-msg.sh  acd-validate.sh
src/perkins/: agent.py  answer_agent.py  chat_client.py  chat_server.py  cli.py  cliplin_env.py  config.py  dispatcher.py  escalation.py  init.py  master.py  models.py  recovery.py  runtime.py  runtime_launcher.py  session.py  summary.py  validation.py  watcher.py  worktree.py
tests/: test_agent.py  test_answer_agent.py  test_chat.py  test_cli_session.py  test_cli_startup_validation.py  test_cliplin_env.py  test_config.py  test_dispatcher.py  test_escalation.py  test_init.py  test_master_compaction.py  test_master_mcp.py  test_master_orchestrator.py  test_master_tools.py  test_master_web_search.py  test_recovery.py  test_runtime.py  test_runtime_launcher.py  test_runtime_shutdown.py  test_session.py  test_start_watch.py  test_summary.py  test_watcher.py  test_watcher_loop.py  test_watcher_poll.py  test_worktree.py
(+5 files in other folders)
